--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <nav class="transparentBG">
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo center">Adama Visionary Studios</a>
+          <a href="index.html" class="brand-logo center">Adama Visionaries Production</a>
         </div>
       </nav>
     </header>
@@ -38,162 +38,35 @@
       <div class="section">
         <div class="container">
           <h2 class="header grey-text text-lighten-5">
-            This is our project submission
+            This is our Final project submission
           </h2>
           <h4 class="grey-text text-lighten-5">
-            for the course introduction to video and audio editing
+            ድብቅ ህመም
           </h4>
           <div class="row center">
             <h5 class="header col s12 white-text light">
-              A fun and playful video for children to learn arithmetic
-              operations.
+              An engaging video narrated by the main character
             </h5>
           </div>
         </div>
       </div>
-      <video class="responsive-video" controls>
-        <source
-          src="assets/videos/Samsung S24 Ultra Hands On - Galaxy AI is CRAZY!.mp4"
-          type="video/mp4"
-        />
-      </video>
+      <div class="video-container">
+        <iframe width="853" height="480" src="https://drive.google.com/file/d/1pOGhQ9o1ICrdVfk5QMWOyDIXY_THodQ9/preview" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     <section class="section scrollspy" id="tools">
       <h3 class="header center grey-text text-lighten-5">
-        Tools used in the process
+        Movie Poster
       </h3>
       <hr width="23%" />
-      <br />
-
-      <div class="row center" id="test1">
-        <div class="col s12 m6 l3">
-          <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-              <div class="col s8">
-                <img
-                  src="assets/images/illustrator.png"
-                  alt=""
-                  class="responsive-img"
-                />
-                <!-- notice the "circle" class -->
-              </div>
-              <div class="col s10">
-                <span class="black-text">
-                  The latest version of Adobe Illustrator was used to edit and
-                  create Vector images.
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6 l3">
-          <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-              <div class="col s8">
-                <img
-                  src="assets/images/photoshop.png"
-                  alt=""
-                  class="responsive-img"
-                />
-              </div>
-              <div class="col s10">
-                <span class="black-text">
-                  Version 2023 of Adobe Photoshop was used to edit and resize
-                  images
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m6 l3">
-          <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-              <div class="col s8">
-                <img
-                  src="assets/images/premiere-pro.png"
-                  alt=""
-                  class="responsive-img"
-                />
-              </div>
-              <div class="col s10">
-                <span class="black-text">
-                  The latest Version of Adobe Premiere Pro was used to Create
-                  the video
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6 l3">
-          <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-              <div class="col s8">
-                <img
-                  src="assets/images/Audacity_Logo.svg"
-                  alt=""
-                  class="responsive-img"
-                />
-              </div>
-              <div class="col s10">
-                <span class="black-text">
-                  Audacity Version 3.4.2 was used to edit voiceovers
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <br /><div>
+      <div class="s2">
+      <img class="responsive-img" src="assets/images/Movie poster.png">
+      </div></div>
+    
     </section>
     <section class="section scrollspy" id="assets">
-      <h3 class="header center grey-text text-lighten-5">
-        Downloadable assets
-      </h3>
-      <hr width="20%" />
-      <br />
-      <div class="row">
-        <div class="col s12 m6 l4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Image assets</span>
-              <p>All the Image assets conveniently zipped.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Download Images</a>
-              <!-- <a href="#">This is a link</a> -->
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6 l4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Audio assets</span>
-              <p>All the audio assets conveniently zipped.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Download audio</a>
-              <a href="#">Download audacity project</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6 l4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Video assets</span>
-              <p>Download the video, metadata or project file</p>
-            </div>
-            <div class="card-action">
-              <!-- <a
-                href="assets/videos/Samsung S24 Ultra Hands On - Galaxy AI is CRAZY!.mp4"
-                download="Project.mp4"
-                >Download Video</a
-              > -->
-              <a href="#">Download project files</a>
-              <a href="assets/metadata.txt">View metadata</a>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </section>
     <section class="section container scrollspy" id="about">
       <!-- <div class="row"> -->
@@ -209,44 +82,83 @@
             Our team is composed from the following students
           </h5>
         </div>
-        <div class="container center col s12 m10 offset-m1 l8 offset-l2">
+        <div class="container center">
           <ul class="collection">
             <li class="collection-item grey lighten-4">
               <!-- <img src="assets/images/Ava1.png" alt="" class="circle" /> -->
               <h5>Robel Issa</h5>
               <p class="grey-text">Ugr/19987/12</p>
               <p class="blue-grey-text">
-                In charge of the whole project and video editing
+                video editing and Acting
               </p>
             </li>
             <li class="collection-item">
               <!-- <img src="assets/images/Ava2.png" alt="" class="circle" /> -->
               <h5>Olyad Feyisa</h5>
               <p class="grey-text">Ugr/19987/12</p>
-              <p class="blue-grey-text">Video Scripting and voiceover</p>
+              <p class="blue-grey-text">Acting</p>
             </li>
             <li class="collection-item grey lighten-4">
               <!-- <img src="assets/images/Ava3.png" alt="" class="circle" /> -->
               <h5>Birhan Mulugeta</h5>
               <p class="grey-text">Ugr/19987/12</p>
-              <p class="blue-grey-text">In charge of asset collection</p>
+              <p class="blue-grey-text">Main Actor</p>
             </li>
             <li class="collection-item">
               <!-- <img src="assets/images/Ava4.png" alt="" class="circle" /> -->
               <h5>Dawit Nigus</h5>
               <p class="grey-text">Ugr/19987/12</p>
-              <p class="blue-grey-text">In charge of website design</p>
+              <p class="blue-grey-text">Acting and Camera</p>
             </li>
             <li class="collection-item grey lighten-4">
               <!-- <img src="assets/images/Ava5.png" alt="" class="circle" /> -->
               <h5>Wubet Ayalew</h5>
               <p class="grey-text">Ugr/19987/12</p>
               <p class="blue-grey-text">
-                In charge of asset collection and website design
+                Actor and producer
+              </p>
+            </li>
+          </ul>
+          <ul class="collection">
+            <li class="collection-item grey lighten-4">
+              <!-- <img src="assets/images/Ava1.png" alt="" class="circle" /> -->
+              <h5>Abework Gosa</h5>
+              <p class="grey-text">Ugr/19557/12</p>
+              <p class="blue-grey-text">
+                Acting and scripting
+              </p>
+            </li>
+            <li class="collection-item">
+              <!-- <img src="assets/images/Ava2.png" alt="" class="circle" /> -->
+              <h5>Abiy Teklu</h5>
+              <p class="grey-text">Ugr/19765/12</p>
+              <p class="blue-grey-text">Acting and Editing</p>
+            </li>
+            <li class="collection-item grey lighten-4">
+              <!-- <img src="assets/images/Ava3.png" alt="" class="circle" /> -->
+              <h5>Mahlet Tadesse</h5>
+              <p class="grey-text">Ugr/19862/12</p>
+              <p class="blue-grey-text">Acting</p>
+            </li>
+            <li class="collection-item">
+              <!-- <img src="assets/images/Ava4.png" alt="" class="circle" /> -->
+              <h5>Dawde Seifu</h5>
+              <p class="grey-text">Ugr/19673/12</p>
+              <p class="blue-grey-text">Acting and Scripting</p>
+            </li>
+            <li class="collection-item grey lighten-4">
+              <!-- <img src="assets/images/Ava5.png" alt="" class="circle" /> -->
+              <h5>Dawit Yimer</h5>
+              <p class="grey-text">Ugr/19995/12</p>
+              <p class="blue-grey-text">
+                acting
               </p>
             </li>
           </ul>
         </div>
+        <div class="s10 l6">
+          <img class="responsive-img" src="assets/images/IMG_6122.jpg">
+          </div>
       </div>
       <!-- </div> -->
     </section>
@@ -259,7 +171,7 @@
       >
       <!-- <a class="center" href="https://www.flaticon.com/free-icons/creative-cloud" title="creative cloud icons">Creative cloud icons created by Maniprasanth - Flaticon</a> -->
       <div class="footer-copyright grey darken-4">
-        <div class="container left">&copy; 2024 Adama Visionary Studios.</div>
+        <div class="container left">&copy; 2024 Adama Visionaries studio.</div>
       </div>
     </footer>
 
